objects/agf__ADM_Application__c.object
<CustomObject>
    <description>Application lists resources associated with the release and management of any system that is released (has Releases).</description>
    <fields>
        <fullName>agf__Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core Salesforce Application</fullName>
                </value>
                <value>
                    <fullName>Distributed Customer Facing Application</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Independent R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Internal Monitoring &amp; Management</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Moratorium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Category__c</fullName>
        <description>Category indicates the stage of an application (Preproduction, Active or Retired) or whether the application represents an activity that is to appear on the Release Schedule.</description>
        <inlineHelpText>Select &quot;Schedule&quot; if this Application object represents an activity that is to appear on the Release schedule (eg, Moratorium or Infrastructure), otherwise select the Application&apos;s life-cycle stage.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preproduction</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Duplicate_Application_Name__c</fullName>
        <description>This field is set by the ADM_Application.trigger with the Application record&apos;s name to detect when duplicate names are used.</description>
        <label>Duplicate Application Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Enable_ERR_Notification_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this checkbox to enable notification emails for eRelease Requests. This functionality replaces the workflow-based notifications. The corresponding workflow for this Application should be deactivated when this box is checked, otherwise recipients may receive duplicate notifications.</description>
        <inlineHelpText>Set this checkbox to enable notification emails for eRelease Requests. To avoid duplicate notifications, disable the corresponding eRelease Request notification workflow for this Application.</inlineHelpText>
        <label>Enable ERR Notification Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Primary_Release_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Release Manager has primary responsibility for managing the releases for teams supported by this .</description>
        <inlineHelpText>Enter the name of the Release Manager with primary responsibility for the releases of products supported by this Application.</inlineHelpText>
        <label>Primary Release Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ADM_Application_RM1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Secondary_Release_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary or backup Release Manager for this Application.</description>
        <inlineHelpText>Enter the secondary or backup Release Manager for this Application.</inlineHelpText>
        <label>Secondary Release Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ADM_Application_RM2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__All_Details</fullName>
        <columns>NAME</columns>
        <columns>agf__Application_Type__c</columns>
        <columns>agf__Primary_Release_Manager__c</columns>
        <columns>agf__Secondary_Release_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Details</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Specify_Application_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(agf__Application_Type__c))</errorConditionFormula>
        <errorDisplayField>agf__Application_Type__c</errorDisplayField>
        <errorMessage>Application Type must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Specify_Category</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT( agf__Category__c ))</errorConditionFormula>
        <errorDisplayField>agf__Category__c</errorDisplayField>
        <errorMessage>The Application&apos;s Category must be specified.</errorMessage>
    </validationRules>
</CustomObject>